# ea-cto-ai-os

./: .gitignore  CLAUDE.md  index.html  package-lock.json  package.json  tailwind.config.ts
.claude/agents/: memory-auditor.md  security-and-privacy-reviewer.md  test-runner.md
apps/ea-dis/: conftest.py  pyproject.toml
apps/ea-dis/ea_dis/: __init__.py  api.py  auth.py  constants.py  db.py  models.py  rag.py
apps/ea-dis/ea_dis/pipeline/: __init__.py  chunker.py  classifier.py  embedder.py  ingest.py  parser.py
apps/ea-dis/ea_dis/tests/: conftest.py  test_citation.py  test_classifier.py  test_hash_chain.py  test_pipeline.py
apps/ea-fci/: conftest.py  pyproject.toml
apps/ea-fci/fci/: __init__.py  anomaly_detector.py  api.py  constants.py  db.py  esign.py  fx_monitor.py  ingestion.py  ld_calculator.py  models.py  tac_gate.py  three_way_match.py  worker.py
apps/ea-fci/fci/tests/: test_anomaly_detector.py  test_fx_monitor.py  test_ld_calculator.py  test_tac_gate.py  test_three_way_match.py
apps/ea-lie/: conftest.py  pyproject.toml  requirements.txt
apps/ea-lie/lie/: __init__.py  api.py  breach_monitor.py  clauses.py  contract_drafter.py  fidic_timebar.py  nda_generator.py  obligation_tracker.py  redline_generator.py  review_engine.py
apps/ea-lie/lie/playbook/: mandatory_clauses.md
apps/ea-lie/lie/tests/: conftest.py  test_breach_monitor.py  test_contract_drafter.py  test_fidic_timebar.py  test_nda_generator.py  test_obligation_tracker.py  test_redline_generator.py  test_review_engine.py
apps/ea-pip/: conftest.py  pyproject.toml
apps/ea-pip/ea_pip/: __init__.py  api.py  award.py  bid_portal.py  compliance_checker.py  constants.py  db.py  models.py  rfx_generator.py  scoring_engine.py  supplier_registry.py  tier1_autoselect.py
apps/ea-pip/ea_pip/tests/: test_compliance_checker.py  test_scoring_engine.py  test_tier1_autoselect.py
ops/n8n/: README.md
ops/n8n/workflows/: w01_w-01_morning_brief.json  w02_w-02_doc_auto-ingest.json  w03_w-03_invoice_tac_gate.json  w04_w-04_ar_dunning.json  w05_w-05_ld_daily_accrual.json  w06_w-06_tier-1_procurement_autoselect.json  w07_w-07_bid-deadline_lock.json  w08_w-08_obligation_calendar_sync.json  w09_w-09_breach_detection_plus_response.json  w10_w-10_fidic_time-bar_alert.json  w11_w-11_weekly_report.json  w12_w-12_self-healing_retry.json
scripts/: start_pilot.sh  stop_pilot.sh
shared/: lmstudio_client.py
src/: App.tsx  components.tsx  styles.css  types.ts
src/api/: client.ts  mockData.ts  tokens.ts
tests/harness/: __init__.py  generators.py  run_harness.py  runner.py
tests/harness/scenarios/: __init__.py  dis_api_loop.py  dis_classify.py  dis_rag.py  fci_anomaly.py  fci_api_loop.py  fci_ld.py  fci_three_way.py  integration.py  lie_api_loop.py  lie_clauses.py  lie_fidic.py  lie_review.py  n8n_w03.py  n8n_w09.py  n8n_w12.py  pip_api_loop.py  pip_tier1.py  pip_tier2.py
