[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ea-fci"
version = "0.1.0"
description = "EA-FCI Financial Control & Intelligence"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.1",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "httpx>=0.27",
    "celery[redis]>=5.3",
    "redis>=5.0",
    "scikit-learn>=1.4",
    "numpy>=1.26",
    "python-multipart>=0.0.9",
    "langdetect>=1.0.9",
    "pdfplumber>=0.10",
    "webauthn>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-mock>=3.14",
    "ruff>=0.4",
    "pytest-asyncio>=0.23",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["fci*"]

[tool.pytest.ini_options]
testpaths = ["fci/tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
