[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ea-lie"
version = "0.1.0"
description = "EA-LIE Legal Intelligence Engine"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.30",
    "python-docx>=1.1",
    "celery[redis]>=5.3",
    "redis>=5.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-mock>=3.14",
    "ruff>=0.4",
]
parse = [
    "llama-parse>=0.4",
    "pdfplumber>=0.10",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["lie*"]

[tool.pytest.ini_options]
testpaths = ["lie/tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
